# agentkit-samples

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CONTRIBUTING.md  DeepResearch.yml  README.md
01-tutorials/01-runtime/: 00_configuration_and_credentials.ipynb  01_getting_started_with_agentkit_sdk.ipynb  02_agentkit_client_and_config.ipynb  03_runtime_invoke_with_stream.ipynb
01-tutorials/04-memory/: 01_memory_with_agentkit_sdk.ipynb
01-tutorials/identity/: README.md
01-tutorials/identity/tutorial-1-userpool-inbound/: .env.template  README.md  app.py  oauth2_testapp.py  requirements.txt
01-tutorials/identity/tutorial-2-feishu-idp/: .env.template  README.md  app.py  requirements.txt
01-tutorials/identity/tutorial-3-feishu-outbound/: README.md  app.py  requirements.txt  templates
02-use-cases/agent_skills/: README.md
02-use-cases/ai_coding/: README.ai.md  README.md  agent.py  requirements.txt
02-use-cases/beginner/: README.md
02-use-cases/content_safety/: pyproject.toml  requirements.txt
02-use-cases/customer_support/: README.cs.md  README.md  agent.py  requirements.txt
02-use-cases/data_analysis_with_datalake/: README.md  agent.py  prompts.py  requirements.txt  settings.txt
02-use-cases/mini_aiops/: agent.py
02-use-cases/stock_analysis/: agent.py
02-use-cases/video_gen/: README.md  README.vd.md  agent.py  requirements.txt
deep_research/: agent.py
markdownlint-rules/: required-headers.js
python/01-tutorials/01-agentkit-runtime/hello_world/: README.md  README_en.md  agent.py  pyproject.toml  requirements.txt
python/01-tutorials/01-agentkit-runtime/realtime_voice/: README.md  README_en.md  agent.py  pyproject.toml  requirements.txt
python/01-tutorials/01-agentkit-runtime/realtime_voice/client/: interface.html  sound_handler.js  stream_manager.js
python/01-tutorials/03-agentKit-identity/feishu_idp/: .env.example  README.md  README_en.md  main.py  pyproject.toml
python/01-tutorials/03-agentKit-identity/feishu_outbound/: .env.template  README.md  README_en.md  __init__.py  agent.py  main.py  pyproject.toml  run.sh
python/01-tutorials/03-agentKit-identity/feishu_outbound/github_assistant/: __init__.py  agent.py
python/01-tutorials/03-agentKit-identity/userpool_inbound/: .env.example  README.md  README_en.md  main.py  pyproject.toml
python/01-tutorials/04-agentkit-tools/aio_sandbox/: .env.example  README.md  README_en.md  agent.py  client.py  pyproject.toml
python/01-tutorials/06-agentkit-knowledge/viking_knowledge/: README.md  README_en.md  agent.py  client.py  pyproject.toml  requirements.txt
python/02-use-cases/ad_video_gen_seq/: README.md  README_en.md  config.yaml.example  debug.py  main.py  pyproject.toml  requirements.txt
python/02-use-cases/ad_video_gen_seq/app/: __init__.py  model.py  utils.py
python/02-use-cases/ad_video_gen_seq/app/eval/: __init__.py  agent.py  hook.py  prompt.py  schema.py
python/02-use-cases/ad_video_gen_seq/app/eval/tools/: geval.py
python/02-use-cases/ad_video_gen_seq/app/image/: __init__.py  agent.py  hook.py  prompt.py  schema.py
python/02-use-cases/ad_video_gen_seq/app/image/tools/: image_generate_gather.py
python/02-use-cases/ad_video_gen_seq/app/market/: __init__.py  agent.py  hook.py  prompt.py
python/02-use-cases/ad_video_gen_seq/app/release/: agent.py  hook.py  prompt.py
python/02-use-cases/ad_video_gen_seq/app/release/tools/: upload.py  video_combine.py
python/02-use-cases/ad_video_gen_seq/app/root/: __init__.py  agent.py
python/02-use-cases/ad_video_gen_seq/app/storyboard/: __init__.py  agent.py  hook.py  prompt.py  schema.py
python/02-use-cases/ad_video_gen_seq/app/video/: __init__.py  agent.py  hook.py  prompt.py
python/02-use-cases/ad_video_gen_seq/app/video/tools/: video_generate_by_code.py
python/02-use-cases/coffee_order/: README.md  agent.py  alipay_payment.html  alipay_payment.py  mock_pay_service.py  pyproject.toml  qr_utils.py  requirements.txt  test_payment.py
python/02-use-cases/coffee_order/knowledge/: coffe.md  sweet.md
python/02-use-cases/customer_support/: README.md  README_en.md  agent.py  client.py  pyproject.toml  requirements.txt
python/02-use-cases/customer_support/pre_build/knowledge/: policies.md  shopping_guide.md  troubleshooting_for_phone.md  troubleshooting_for_tv.md
python/02-use-cases/customer_support/pre_build/knowledge_en/: policies.md  shopping_guide.md  troubleshooting_for_phone.md  troubleshooting_for_tv.md
python/02-use-cases/customer_support/prompts/: prompt.py
python/02-use-cases/customer_support/tools/: crm_mock.py
python/02-use-cases/data_analysis_with_datalake/: README.md  README_en.md  agent.py  client.py  prompts.py  pyproject.toml  requirements.txt
python/02-use-cases/data_analysis_with_datalake/tools/: __init__.py  catalog_discovery.py  duckdb_sql_execution.py  lancedb_hybrid_execution.py  lancedb_manager.py  utils.py
python/02-use-cases/data_analysis_with_datalake/web/: app.py
python/02-use-cases/video_gen/: README.md  README_en.md  agent.py  agent.yaml  consts.py  pyproject.toml  requirements.txt
python/02-use-cases/video_gen/scripts/: setup.sh
python/02-use-cases/video_gen/tool/: tos_upload.py
skills/veadk-skills/: SKILL.md
template/: project.yaml
workflow_utils/: check_project_yaml.py  check_readme_metadata.py  check_usecases.py
(+310 files in other folders)
