[project]
name = "veadk-multimedia-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "veadk-python==0.5.5",
    "uvicorn>=0.38.0",
    "moviepy>=2.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
