[project]
name = "online-order-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "pillow>=12.0.0",
    "qrcode[pil]>=8.2",
    "tos>=2.8.7",
    "uvicorn>=0.38.0",
    "veadk-python[extensions]>=0.2.15",
    "volcengine>=1.0.204",
]
