[project]
name = "customer-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkit-sdk-python==0.4.3",
    "google-adk==1.21.0",
    "mem0ai==0.1.118",
    "veadk-python[extensions]==0.5.20",
    "veadk-python==0.5.20",
]
