[project]
name = "video-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkit-sdk-python>=0.1.13",
    "google-adk>=1.18.0,<1.20.0",
    "tos>=2.8.7",
    "veadk-python>=0.2.27",
    "volcengine-python-sdk>=4.0.31",
]
