[project]
name = "agentkit-hello-world-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkit-sdk-python==0.1.15",
    "google-adk==1.18.0",
    "urllib3<2.0.0",
    "veadk-python==0.2.29",
    "volcengine-python-sdk>=4.0.31",
]
