[project]
name = "userpool_inbound"
version = "0.1.0"
description = "实验1: 使用用户池配置用户身份 (Inbound 认证)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "veadk-python @ https://force-workshop.tos-cn-beijing.volces.com/veadk_python-0.2.22.tar.gz",
    "volcengine-python-sdk>=4.0.36",
    "agentkit-sdk-python>=0.1.11",
]
