[project]
name = "vikingdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk==1.19.0",
    "veadk-python[extensions]==0.5.5",
    "veadk-python==0.5.5",
    "agentkit-sdk-python==0.2.0",
    "python-dotenv>=1.0.0",
]